ADCM-2580 Tests: ansible venv on actions
That commit extends functional tests with test of venv parameter
on actions.

--- a/tests/functional/test_ansible_venv_data/cluster_obj_no_venv_action_9/config.yaml
+++ b/tests/functional/test_ansible_venv_data/cluster_obj_no_venv_action_9/config.yaml
@@ -1,19 +1,15 @@
 ---
 
 - type: "cluster"
-  name: "no_venv"
+  name: "obj_no_venv_action_9"
   version: "1.0"
 
-  config:
-    - type: "integer"
-      name: "int"
-      default: 0
-
   actions: &actions
-    no_venv:
+    obj_no_venv_action_9:
       type: job
       script_type: ansible
       script: check_ansible.yaml
+      venv: "2.9"
       states:
         available: any
       config:
@@ -24,10 +20,11 @@
 
 
 - type: "service"
-  name: "no_venv"
+  name: "obj_no_venv_action_9"
   version: "1.0"
   actions: *actions
 
   components:
-      no_venv:
+      obj_no_venv_action_9:
+        venv: "default"
         actions: *actions
