--- a/tests/functional/test_ansible_venv_data/cluster_obj_venv_9/config.yaml
+++ b/tests/functional/test_ansible_venv_data/cluster_obj_venv_9/config.yaml
@@ -1,16 +1,12 @@
 ---
 
 - type: "cluster"
-  name: "no_venv"
+  name: "obj_venv_9"
   version: "1.0"
-
-  config:
-    - type: "integer"
-      name: "int"
-      default: 0
+  venv: "2.9"
 
   actions: &actions
-    no_venv:
+    obj_venv_9:
       type: job
       script_type: ansible
       script: check_ansible.yaml
@@ -24,10 +20,12 @@
 
 
 - type: "service"
-  name: "no_venv"
+  name: "obj_venv_9"
   version: "1.0"
+  venv: "2.9"
   actions: *actions
 
   components:
-      no_venv:
+      obj_venv_9:
+        venv: "2.9"
         actions: *actions
