--- a/tests/functional/test_ansible_venv_data/provider_obj_venv_default/config.yaml
+++ b/tests/functional/test_ansible_venv_data/provider_obj_venv_default/config.yaml
@@ -1,16 +1,12 @@
 ---
 
-- type: "cluster"
-  name: "no_venv"
+- type: "provider"
+  name: "provider_obj_venv_default"
   version: "1.0"
-
-  config:
-    - type: "integer"
-      name: "int"
-      default: 0
+  venv: "default"
 
   actions: &actions
-    no_venv:
+    obj_venv_default:
       type: job
       script_type: ansible
       script: check_ansible.yaml
@@ -23,11 +19,8 @@
           type: "integer"
 
 
-- type: "service"
-  name: "no_venv"
+- type: "host"
+  name: "obj_venv_default"
   version: "1.0"
+  venv: "default"
   actions: *actions
-
-  components:
-      no_venv:
-        actions: *actions
