ADCM-2651 add object view perm, add view perm for business and role roles

--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -1,6 +1,6 @@
 ---
 
-version: 1
+version: 2
 
 roles:
     - name: Create host
@@ -33,6 +33,7 @@ roles:
             - name: hostprovider
               codenames:
                 - add
+                - view
 
     - name: Create cluster
       description: The ability to add new cluster
@@ -46,6 +47,7 @@ roles:
             - name: cluster
               codenames:
                 - add
+                - view
 
     - name: Accept license
       description: The ability to accept bundle license
@@ -115,6 +117,7 @@ roles:
         app_name: cm
         model: Cluster
       child:
+        - Get cluster object
         - View cluster config
         - View config endpoints
 
@@ -147,6 +150,8 @@ roles:
         app_name: cm
         model: ClusterObject
       child:
+        - Get cluster object
+        - Get service object
         - View service config
         - View config endpoints
 
@@ -179,6 +184,9 @@ roles:
         app_name: cm
         model: ServiceComponent
       child:
+        - Get cluster object
+        - Get service object
+        - Get component object
         - View component config
         - View config endpoints
 
@@ -210,6 +218,7 @@ roles:
         app_name: cm
         model: HostProvider
       child:
+        - Get provider object
         - View provider config
         - View config endpoints
 
@@ -241,6 +250,7 @@ roles:
         app_name: cm
         model: Host
       child:
+        - Get host object
         - View host config
         - View config endpoints
 
@@ -303,6 +313,7 @@ roles:
         app_name: cm
         model: Cluster
       child:
+        - Get cluster object
         - Edit cluster config
         - Edit config endpoints
 
@@ -335,6 +346,8 @@ roles:
         app_name: cm
         model: ClusterObject
       child:
+        - Get cluster object
+        - Get service object
         - Edit service config
         - Edit config endpoints
 
@@ -368,6 +381,9 @@ roles:
         app_name: cm
         model: ServiceComponent
       child:
+        - Get cluster object
+        - Get service object
+        - Get component object
         - Edit component config
         - Edit config endpoints
 
@@ -400,6 +416,7 @@ roles:
         app_name: cm
         model: HostProvider
       child:
+        - Get provider object
         - Edit provider config
         - Edit config endpoints
 
@@ -432,6 +449,7 @@ roles:
         app_name: cm
         model: Host
       child:
+        - Get host object
         - Edit host config
         - Edit config endpoints
 
@@ -496,6 +514,8 @@ roles:
       class_name: ParentRole
       any_category: true
       child:
+        - Get cluster object
+        - Get service object
         - View cluster imports
         - View service imports
 
@@ -558,6 +578,8 @@ roles:
         - cluster
         - service
       child:
+        - Get cluster object
+        - Get service object
         - Manage cluster imports
         - Manage service imports
 
@@ -578,10 +600,11 @@ roles:
             - name: cluster
               codenames:
                 - add_service_to
+                - view
 
-    - name: Remove service
+    - name: Remove service hidden
       description: The ability to remove service from cluster
-      type: business
+      type: hidden
       parametrized_by:
         - service
       module_name: rbac.roles
@@ -589,16 +612,32 @@ roles:
       init_params:
         app_name: cm
         model: ClusterObject
-      any_category: true
       apps:
         - label: cm
           models:
             - name: clusterobject
               codenames:
+                - view
                 - delete
 
+    - name: Remove service
+      description: The ability to remove service from cluster
+      type: business
+      parametrized_by:
+        - service
+      module_name: rbac.roles
+      class_name: ParentRole
+      init_params:
+        app_name: cm
+        model: ClusterObject
+      any_category: true
+      child:
+        - Remove service hidden
+        - Get cluster object
+
     - name: Remove hosts
-      description: The ability to remove hosts
+      display_name: Remove host
+      description: The ability to remove host
       type: business
       parametrized_by:
         - host
@@ -613,12 +652,12 @@ roles:
           models:
             - name: host
               codenames:
+                - view
                 - delete
 
     - name: Map hosts
-      display_name: Add hosts to the Cluster
       description: The ability to map hosts to the Cluster
-      type: business
+      type: hidden
       parametrized_by:
         - cluster
       module_name: rbac.roles
@@ -626,7 +665,6 @@ roles:
       init_params:
         app_name: cm
         model: Cluster
-      any_category: true
       apps:
         - label: cm
           models:
@@ -634,10 +672,24 @@ roles:
               codenames:
                 - map_host_to
 
-    - name: Unmap hosts
-      display_name: Remove hosts from the Cluster
-      description: The ability to unmap hosts to the Cluster
+    - name: Add hosts to the Cluster
+      description: The ability to map hosts to the Cluster
       type: business
+      parametrized_by:
+        - cluster
+      module_name: rbac.roles
+      class_name: ParentRole
+      init_params:
+        app_name: cm
+        model: Cluster
+      any_category: true
+      child:
+        - Map hosts
+        - Get cluster object
+
+    - name: Unmap hosts
+      description: The ability to unmap hosts to the Cluster
+      type: hidden
       parametrized_by:
         - cluster
       module_name: rbac.roles
@@ -645,7 +697,6 @@ roles:
       init_params:
         app_name: cm
         model: Cluster
-      any_category: true
       apps:
         - label: cm
           models:
@@ -653,9 +704,24 @@ roles:
               codenames:
                 - unmap_host_from
 
-    - name: View host-components
-      description: The ability to view exact cluster's host-component page
+    - name: Remove hosts from the Cluster
+      description: The ability to map hosts to the Cluster
       type: business
+      parametrized_by:
+        - cluster
+      module_name: rbac.roles
+      class_name: ParentRole
+      init_params:
+        app_name: cm
+        model: Cluster
+      any_category: true
+      child:
+        - Unmap hosts
+        - Get cluster object
+
+    - name: View host-components hidden
+      description: The ability to view exact cluster's host-component page
+      type: hidden
       parametrized_by:
         - cluster
       module_name: rbac.roles
@@ -663,13 +729,27 @@ roles:
       init_params:
         app_name: cm
         model: Cluster
-      any_category: true
       apps:
         - label: cm
           models:
             - name: cluster
               codenames:
                 - view_host_components_of
+
+    - name: View host-components
+      description: The ability to map hosts to the Cluster
+      type: business
+      parametrized_by:
+        - cluster
+      module_name: rbac.roles
+      class_name: ParentRole
+      init_params:
+        app_name: cm
+        model: Cluster
+      any_category: true
+      child:
+        - View host-components hidden
+        - Get cluster object
 
     - name: View any object host-components
       description: The ability to view host-components page of all clusters
@@ -683,10 +763,13 @@ roles:
             - name: hostcomponent
               codenames:
                 - view
+            - name: cluster
+              codenames:
+                - view
 
-    - name: Edit host-components
+    - name: Edit host-components hidden
       description: The ability to edit exact cluster's host-component page
-      type: business
+      type: hidden
       parametrized_by:
         - cluster
       module_name: rbac.roles
@@ -703,6 +786,21 @@ roles:
                 - view_host_components_of
                 - edit_host_components_of
 
+    - name: Edit host-components
+      description: The ability to map hosts to the Cluster
+      type: business
+      parametrized_by:
+        - cluster
+      module_name: rbac.roles
+      class_name: ParentRole
+      init_params:
+        app_name: cm
+        model: Cluster
+      any_category: true
+      child:
+        - Edit host-components hidden
+        - Get cluster object
+
     - name: Upgrade cluster bundle
       description: Update the cluster bundle
       type: business
@@ -718,6 +816,7 @@ roles:
           models:
             - name: cluster
               codenames:
+                - view
                 - view_upgrade_of
                 - do_upgrade_of
 
@@ -736,6 +835,7 @@ roles:
           models:
             - name: hostprovider
               codenames:
+                - view
                 - view_upgrade_of
                 - do_upgrade_of
 
@@ -755,6 +855,7 @@ roles:
           models:
             - name: cluster
               codenames:
+                - view
                 - delete
 
     - name: Remove provider
@@ -773,6 +874,7 @@ roles:
           models:
             - name: hostprovider
               codenames:
+                - view
                 - delete
 
     - name: Remove bundle
@@ -786,6 +888,7 @@ roles:
           models:
             - name: bundle
               codenames:
+                - view
                 - delete
 
     - name: View ADCM settings
@@ -1054,13 +1157,7 @@ roles:
       class_name: ParentRole
       child:
         - Get ADCM object
-        - Get provider
-        - Get cluster
-        - Get host
-        - Get service
-        - Get component
-        - Get task and jobs
-        - Get stack
+        - Get bundle
         - Get concerns
 
     - name: Get ADCM object
@@ -1076,7 +1173,8 @@ roles:
                 - view
 
     - name: Get provider
-      description: Read access to Provider
+      display_name: Get all providers
+      description: Read access to all Providers
       type: hidden
       module_name: rbac.roles
       class_name: ModelRole
@@ -1087,8 +1185,26 @@ roles:
               codenames:
                 - view
 
+    - name: Get provider object
+      description: Read access to Provider
+      type: hidden
+      module_name: rbac.roles
+      class_name: ObjectRole
+      parametrized_by:
+        - provider
+      init_params:
+        app_name: cm
+        model: HostProvider
+      apps:
+        - label: cm
+          models:
+            - name: hostprovider
+              codenames:
+                - view
+
     - name: Get cluster
-      description: Read access to Clusters
+      display_name: Get all clusters
+      description: Read access to all Clusters
       type: hidden
       module_name: rbac.roles
       class_name: ModelRole
@@ -1099,8 +1215,26 @@ roles:
               codenames:
                 - view
 
+    - name: Get cluster object
+      description: Read access to Cluster
+      type: hidden
+      module_name: rbac.roles
+      class_name: ObjectRole
+      parametrized_by:
+        - cluster
+      init_params:
+        app_name: cm
+        model: Cluster
+      apps:
+        - label: cm
+          models:
+            - name: cluster
+              codenames:
+                - view
+
     - name: Get host
-      description: Read access to Host
+      display_name: Get all hosts
+      description: Read access to all Hosts
       type: hidden
       module_name: rbac.roles
       class_name: ModelRole
@@ -1111,8 +1245,26 @@ roles:
               codenames:
                 - view
 
+    - name: Get host object
+      description: Read access to Host
+      type: hidden
+      module_name: rbac.roles
+      class_name: ObjectRole
+      parametrized_by:
+        - host
+      init_params:
+        app_name: cm
+        model: Host
+      apps:
+        - label: cm
+          models:
+            - name: host
+              codenames:
+                - view
+
     - name: Get service
-      description: Read access to Service
+      display_name: Get all services
+      description: Read access to all Services
       type: hidden
       module_name: rbac.roles
       class_name: ModelRole
@@ -1123,8 +1275,26 @@ roles:
               codenames:
                 - view
 
+    - name: Get service object
+      description: Read access to Service
+      type: hidden
+      module_name: rbac.roles
+      class_name: ObjectRole
+      parametrized_by:
+        - service
+      init_params:
+        app_name: cm
+        model: ClusterObject
+      apps:
+        - label: cm
+          models:
+            - name: clusterobject
+              codenames:
+                - view
+
     - name: Get component
-      description: Read access to Component
+      display_name: Get all components
+      description: Read access to all Components
       type: hidden
       module_name: rbac.roles
       class_name: ModelRole
@@ -1135,8 +1305,26 @@ roles:
               codenames:
                 - view
 
+    - name: Get component object
+      description: Read access to Component
+      type: hidden
+      module_name: rbac.roles
+      class_name: ObjectRole
+      parametrized_by:
+        - component
+      init_params:
+        app_name: cm
+        model: ServiceComponent
+      apps:
+        - label: cm
+          models:
+            - name: servicecomponent
+              codenames:
+                - view
+
     - name: Get task and jobs
-      description: Read access to job execution information
+      display_name: Get all tasks and jobs
+      description: Read access to all job execution information
       type: hidden
       module_name: rbac.roles
       class_name: ModelRole
@@ -1153,30 +1341,60 @@ roles:
               codenames:
                 - view
 
-    - name: Get stack
-      description: Read access to all prototypes
+    - name: Get task object
+      description: Read access to Task
+      type: hidden
+      module_name: rbac.roles
+      class_name: ObjectRole
+      init_params:
+        app_name: cm
+        model: TaskLog
+      apps:
+        - label: cm
+          models:
+            - name: tasklog
+              codenames:
+                - view
+
+    - name: Get job object
+      description: Read access to Job
+      type: hidden
+      module_name: rbac.roles
+      class_name: ObjectRole
+      init_params:
+        app_name: cm
+        model: JobLog
+      apps:
+        - label: cm
+          models:
+            - name: joblog
+              codenames:
+                - view
+
+    - name: Get log object
+      description: Read access to Log
+      type: hidden
+      module_name: rbac.roles
+      class_name: ObjectRole
+      init_params:
+        app_name: cm
+        model: LogStorage
+      apps:
+        - label: cm
+          models:
+            - name: logstorage
+              codenames:
+                - view
+
+    - name: Get bundle
+      description: Read access to all Bundle
       type: hidden
       module_name: rbac.roles
       class_name: ModelRole
       apps:
         - label: cm
           models:
-            - name: prototype
-              codenames:
-                - view
             - name: bundle
-              codenames:
-                - view
-            - name: action
-              codenames:
-                - view
-            - name: prototypeconfig
-              codenames:
-                - view
-            - name: prototypeexport
-              codenames:
-                - view
-            - name: prototypeimport
               codenames:
                 - view
 
@@ -1197,6 +1415,12 @@ roles:
       module_name: rbac.roles
       class_name: ParentRole
       child:
+        - Get provider
+        - Get cluster
+        - Get host
+        - Get service
+        - Get component
+        - Get task and jobs
         - View any object host-components
         - View any object configuration
         - View any object import
@@ -1211,11 +1435,15 @@ roles:
       module_name: rbac.roles
       class_name: ParentRole
       child:
+        - Get cluster object
+        - Get service object
+        - Get component object
+        - Get host object
         - View host configurations
         - Edit service configurations
         - Edit component configurations
         - View host-components
-        - Manage imports
+        - Manage service imports
 
     - name: Cluster Administrator
       type: role
@@ -1231,6 +1459,7 @@ roles:
         - Edit cluster configurations
         - Edit host configurations
         - Edit host-components
+        - Manage cluster imports
         - Add service
         - Remove service
         - Remove hosts
@@ -1251,6 +1480,8 @@ roles:
       module_name: rbac.roles
       class_name: ParentRole
       child:
+        - Get provider object
+        - Get host object
         - Edit provider configurations
         - Edit host configurations
         - Upgrade provider bundle
