--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -688,7 +688,7 @@ roles:
         - Get cluster object
 
     - name: Unmap hosts
-      description: The ability to unmap hosts to the Cluster
+      description: The ability to unmap hosts from the Cluster
       type: hidden
       parametrized_by:
         - cluster
@@ -705,7 +705,7 @@ roles:
                 - unmap_host_from
 
     - name: Remove hosts from the Cluster
-      description: The ability to map hosts to the Cluster
+      description: The ability to upmap hosts from the Cluster
       type: business
       parametrized_by:
         - cluster
@@ -737,7 +737,7 @@ roles:
                 - view_host_components_of
 
     - name: View host-components
-      description: The ability to map hosts to the Cluster
+      description: The ability to view exact cluster's host-component page
       type: business
       parametrized_by:
         - cluster
@@ -787,7 +787,7 @@ roles:
                 - edit_host_components_of
 
     - name: Edit host-components
-      description: The ability to map hosts to the Cluster
+      description: The ability to edit exact cluster's host-component page
       type: business
       parametrized_by:
         - cluster
