--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -5,3 +5,4 @@ markers =
     negative: marks tests as negative (deselect with '-m "not negative"')
     positive: marks tests as positive (select only positive with '-m "positive"')
     only_clean_adcm: mark a test/module to run it only with clean ADCM
+    extra_rbac: mark an RBAC related test/module to exclude it from full run
