--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -4,4 +4,5 @@ markers =
     smoke: mark tests that covers the very basic functionality
     negative: marks tests as negative (deselect with '-m "not negative"')
     positive: marks tests as positive (select only positive with '-m "positive"')
+    regression: mark a test/module that tests known bug
     only_clean_adcm: mark a test/module to run it only with clean ADCM
