--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -1,6 +1,6 @@
 ---
 
-version: 2
+version: 5
 
 roles:
     - name: Create host
@@ -1173,7 +1173,7 @@ roles:
               codenames:
                 - view
 
-    - name: Get provider object
+    - name: Get provider object hidden
       description: Read access to Provider
       type: hidden
       module_name: rbac.roles
@@ -1190,6 +1190,20 @@ roles:
               codenames:
                 - view
 
+    - name: Get provider object
+      description: Read access to Provider
+      type: hidden
+      module_name: rbac.roles
+      class_name: ParentRole
+      parametrized_by:
+        - provider
+      init_params:
+        app_name: cm
+        model: HostProvider
+      child:
+        - Get provider object hidden
+        - Get task object
+
     - name: Get cluster
       display_name: Get all clusters
       description: Read access to all Clusters
@@ -1203,7 +1217,7 @@ roles:
               codenames:
                 - view
 
-    - name: Get cluster object
+    - name: Get cluster object hidden
       description: Read access to Cluster
       type: hidden
       module_name: rbac.roles
@@ -1220,6 +1234,20 @@ roles:
               codenames:
                 - view
 
+    - name: Get cluster object
+      description: Read access to Cluster
+      type: hidden
+      module_name: rbac.roles
+      class_name: ParentRole
+      parametrized_by:
+        - cluster
+      init_params:
+        app_name: cm
+        model: Cluster
+      child:
+        - Get cluster object hidden
+        - Get task object
+
     - name: Get host
       display_name: Get all hosts
       description: Read access to all Hosts
@@ -1233,7 +1261,7 @@ roles:
               codenames:
                 - view
 
-    - name: Get host object
+    - name: Get host object hidden
       description: Read access to Host
       type: hidden
       module_name: rbac.roles
@@ -1250,6 +1278,20 @@ roles:
               codenames:
                 - view
 
+    - name: Get host object
+      description: Read access to Host
+      type: hidden
+      module_name: rbac.roles
+      class_name: ParentRole
+      parametrized_by:
+        - host
+      init_params:
+        app_name: cm
+        model: Host
+      child:
+        - Get host object hidden
+        - Get task object
+
     - name: Get service
       display_name: Get all services
       description: Read access to all Services
@@ -1263,7 +1305,7 @@ roles:
               codenames:
                 - view
 
-    - name: Get service object
+    - name: Get service object hidden
       description: Read access to Service
       type: hidden
       module_name: rbac.roles
@@ -1280,6 +1322,20 @@ roles:
               codenames:
                 - view
 
+    - name: Get service object
+      description: Read access to Service
+      type: hidden
+      module_name: rbac.roles
+      class_name: ParentRole
+      parametrized_by:
+        - service
+      init_params:
+        app_name: cm
+        model: ClusterObject
+      child:
+        - Get service object hidden
+        - Get task object
+
     - name: Get component
       display_name: Get all components
       description: Read access to all Components
@@ -1293,7 +1349,7 @@ roles:
               codenames:
                 - view
 
-    - name: Get component object
+    - name: Get component object hidden
       description: Read access to Component
       type: hidden
       module_name: rbac.roles
@@ -1309,6 +1365,20 @@ roles:
             - name: servicecomponent
               codenames:
                 - view
+
+    - name: Get component object
+      description: Read access to Component
+      type: hidden
+      module_name: rbac.roles
+      class_name: ParentRole
+      parametrized_by:
+        - component
+      init_params:
+        app_name: cm
+        model: ServiceComponent
+      child:
+        - Get component object hidden
+        - Get task object
 
     - name: Get task and jobs
       display_name: Get all tasks and jobs
@@ -1330,49 +1400,10 @@ roles:
                 - view
 
     - name: Get task object
-      description: Read access to Task
+      description: Read access to TaskLog, JobLog and LogStorage of exact object
       type: hidden
       module_name: rbac.roles
-      class_name: ObjectRole
-      init_params:
-        app_name: cm
-        model: TaskLog
-      apps:
-        - label: cm
-          models:
-            - name: tasklog
-              codenames:
-                - view
-
-    - name: Get job object
-      description: Read access to Job
-      type: hidden
-      module_name: rbac.roles
-      class_name: ObjectRole
-      init_params:
-        app_name: cm
-        model: JobLog
-      apps:
-        - label: cm
-          models:
-            - name: joblog
-              codenames:
-                - view
-
-    - name: Get log object
-      description: Read access to Log
-      type: hidden
-      module_name: rbac.roles
-      class_name: ObjectRole
-      init_params:
-        app_name: cm
-        model: LogStorage
-      apps:
-        - label: cm
-          models:
-            - name: logstorage
-              codenames:
-                - view
+      class_name: TaskRole
 
     - name: Get stack
       description: Read access to all Bundle
