--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
 * @arenadata/python
-/tests/functional/ @arenadata/python-qa
-/tests/ui_tests/ @arenadata/python-qa
-/tests/api/ @arenadata/python-qa
+/tests/functional/ @arenadata/python-web-qa
+/tests/ui_tests/ @arenadata/python-web-qa
+/tests/api/ @arenadata/python-web-qa
 /web/ @arenadata/angular
